--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
       <!-- bagian sosmed -->
 
       <div class="sosmed">
-        <a href="https://instagram.com/azmabdlh_?igshid=ZGUzMzM3NWJiOQ==" class="ig" target="_blank">
+        <a href="https://instagram.com/angga_ebtasianta?igshid=ZDdkNTZiNTM=" class="ig" target="_blank">
             <img src="download-removebg-preview (1).png" alt="" width="90px">
         </a>
-        <a href="https://wa.me/6282281114193" class="wa" target="_blank">
+        <a href="https://wa.me/6281265739770" class="wa" target="_blank">
             <img src="png-transparent-whatsapp-logo-whatsapp-logo-whatsapp-text-trademark-logo-removebg-preview.png" alt="" width="95px">
         </a>
-        <a href="https://twitter.com/ab24128110" class="tweet" target="_blank">
+        <a href="https://www.facebook.com/profile.php?id=100041481340428&mibextid=ZbWKwL" class="tweet" target="_blank">
             <img src="lol.png" alt="" width="50px">
         </a>
       </div>
